<?xml version="1.0"?>
<package format="3">
  <name>my_motor_hardware</name>
  <version>0.0.1</version>
  <description>Hardware BTS7960</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
</package>
